Fixed navbar overlapping issue

--- a/Advisors with MEAN/Advisors/public/project/css/style.css
+++ b/Advisors with MEAN/Advisors/public/project/css/style.css
@@ -1,3 +1,12 @@
+html{
+    background-color: #343a40;
+}
+
+.container-fluid {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
   .center-block {
       display: block;
       margin-right: auto;
